db Ready
